Fixed slide-menu overflow issue while menu closed on iOS

--- a/css/nav.css
+++ b/css/nav.css
@@ -34,7 +34,7 @@ nav {
 
 
 .slide-menu {
-    background-color: rgb(179, 29, 29);
+    background-color: rgb(44, 44, 44);
     cursor: pointer;
 
     /* The following CSS enables Full Screen Menu */
