--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 html, body {
     overflow-x: hidden;
+    background-color: rgb(44, 44, 44);
 }
 
 *::-webkit-scrollbar {
